# RAG-Tutorial

./: README.md  interview.txt  pyproject.toml
RAG/: crawler.py
RAG/travel_agent/: TODO  personality_detector.py
chaining/: 1_invoke.py  2_prompting.py  3_pydantic.py  5_chunking.py  6_vectorstoring.ipynb  6_vectorstoring.py  7_docling.ipynb  8_Simple_RAG.py  chatbot_with_human_in_loop.py
faiss_index/: index.faiss  index.pkl
